--- a/arch/arm64/configs/msm8953-asus_twrp_defconfig
+++ b/arch/arm64/configs/msm8953-asus_twrp_defconfig
@@ -56,6 +56,9 @@ CONFIG_ARCH_MSM8953=y
 CONFIG_PCI_MSM=y
 CONFIG_SCHED_MC=y
 CONFIG_PREEMPT=y
+# CONFIG_HZ_250 is not set
+CONFIG_HZ_300=y
+CONFIG_HZ=300
 CONFIG_CLEANCACHE=y
 CONFIG_CMA=y
 CONFIG_CMA_DEBUGFS=y
